--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  background-image: url(../images/navbar.png);
+  background-image: url(../images/navbar);
   background-color: transparent;
   height: 103px;
   background-repeat: repeat-x;
@@ -72,6 +72,9 @@ li > a.left, li > a.right {
 
 #duelModeSelector {
   grid-template-columns: repeat(5, 2em); }
+
+html {
+  color: white; }
 
 body {
   display: flex;
@@ -128,6 +131,13 @@ footer {
 pre {
   white-space: pre-wrap; }
 
+.errorCode {
+  width: 100vw;
+  margin: 32vh 0;
+  text-align: center;
+  font-weight: bold;
+  transform: rotateZ(-15deg); }
+
 .questionTitle {
   font-size: 2rem;
   background-color: lightgray; }
@@ -137,7 +147,7 @@ pre {
   grid-template-columns: 5em 4em 1fr 1fr;
   margin: .5em 0;
   padding: 0.5em 0;
-  border: 2px solid black;
+  border: 2px solid white;
   border-radius: 5px; }
   .score-row.leader {
     grid-template-columns: 5em 1fr 1fr; }
@@ -178,15 +188,15 @@ pre {
   .dropdown.active {
     height: 6em; }
   .dropdown .top {
-    background-image: url(../images/dropdownTop.png); }
+    background-image: url(../images/dropdownTop); }
   .dropdown .bottom {
-    background-image: url(../images/dropdownBottom.png); }
+    background-image: url(../images/dropdownBottom); }
   .dropdown .top, .dropdown .bottom {
     width: inherit;
     height: 2em;
     background-size: cover; }
   .dropdown > .content {
-    background-image: url(../images/dropdownMiddle.png);
+    background-image: url(../images/dropdownMiddle);
     background-size: cover;
     width: inherit;
     height: inherit;
@@ -213,7 +223,7 @@ pre {
   position: relative;
   background: none;
   border: none;
-  border-bottom: 1px solid #9e9e9e;
+  border-bottom: 1px solid white;
   margin: 0 0 20px 0; }
   .btn-password:hover, .btn-password:focus, .btn-password:active {
     background: none; }
@@ -222,7 +232,7 @@ pre {
     position: absolute;
     height: 60%;
     width: 100%;
-    border-left: 1px solid #9e9e9e;
+    border-left: 1px solid white;
     top: 20%;
     left: 0; }
 
@@ -233,7 +243,7 @@ pre {
   width: 5em;
   height: 10px;
   border-radius: 5px;
-  background-color: darkgrey; }
+  background-color: white; }
   .passwordStrength .passwordStrengthForeground {
     height: 100%;
     border-radius: 5px; }
@@ -280,11 +290,11 @@ pre {
   position: relative; }
 
 .split {
-  display: grid;
-  grid-template-rows: auto auto; }
+  display: block; }
+  .split > .btn-flat {
+    width: 100%; }
   .split.middleBorder > :nth-child(2n+1) {
-    padding: 2em;
-    border-right: 1px solid black; }
+    padding: 2em; }
 
 .center {
   display: block;
@@ -306,7 +316,7 @@ pre {
   display: none; }
 
 .userImg {
-  border: solid black 2px;
+  border: solid white 2px;
   border-radius: 50%; }
 
 .imgSize, .userImg {
@@ -352,7 +362,8 @@ div.success {
   background-color: lightgreen;
   color: green;
   font-size: 1.5em;
-  font-weight: bold; }
+  font-weight: bold;
+  margin: 0.5em 1em; }
   div.success p {
     text-align: center;
     margin: auto; }
@@ -360,7 +371,8 @@ div.success {
 p.success {
   color: green;
   font-size: 1.5em;
-  font-weight: bold; }
+  font-weight: bold;
+  margin: 0.5em 1em; }
 
 div.errors {
   border-radius: 5px;
@@ -368,7 +380,8 @@ div.errors {
   background-color: lightcoral;
   color: red;
   font-size: 1.5em;
-  font-weight: bold; }
+  font-weight: bold;
+  margin: 0.5em 1em; }
   div.errors p {
     text-align: center;
     margin: auto; }
@@ -376,9 +389,10 @@ div.errors {
 p.errors {
   color: red;
   font-size: 1.5em;
-  font-weight: bold; }
+  font-weight: bold;
+  margin: 0.5em 1em; }
 
-p.normal {
+.editorError p.normal {
   color: darkorange;
   background-color: transparent;
   font-size: 1.5em;
@@ -401,6 +415,8 @@ p.normal {
 .duelList {
   height: 50vh;
   overflow-y: scroll;
+  margin-left: 1em;
+  margin-right: 1em;
   margin-bottom: 1em; }
   .duelList li {
     justify-items: center;
@@ -445,17 +461,21 @@ p.normal {
       -webkit-text-stroke-color: white; }
   .duelList p, .duelList a {
     font-weight: bold;
-    font-size: 1.5rem; }
+    font-size: 0.8rem; }
   .duelList .won {
-    background-color: green; }
+    background-color: #72f725; }
   .duelList .lost {
-    background-color: red; }
+    background-color: #f42929; }
   .duelList .draw {
-    background-color: yellow; }
+    background-color: #ff8300; }
   .duelList .expired {
-    background-color: grey; }
+    background-color: #3c3c3c; }
+  .duelList .expiredButPlayed {
+    background-color: #5c5c5c; }
+  .duelList .waiting {
+    background-color: #55d8e6; }
   .duelList .inProgress {
-    background-color: lightblue; }
+    background-color: #add8e6; }
   .duelList .won, .duelList .lost, .duelList .draw, .duelList .expired, .duelList .inProgress {
     opacity: 1; }
 
@@ -465,7 +485,7 @@ p.normal {
   grid-template-columns: 25% 75%; }
 
 .side-nav li:last-child {
-  color: black;
+  color: white;
   display: grid;
   grid-template-columns: 1fr auto 1fr; }
 
@@ -479,6 +499,51 @@ p.normal {
   .editorError * {
     text-align: left; }
 
+.span-2 {
+  grid-column: span 2; }
+
+.btn-flat {
+  color: white;
+  padding: 0;
+  background-color: transparent;
+  border: solid white 2px;
+  margin: 5px 0; }
+  .btn-flat:hover {
+    background-color: #3c3c3c; }
+
+#duelStates {
+  display: grid;
+  justify-items: center;
+  grid-template-columns: 1fr 1fr; }
+  #duelStates li {
+    margin-left: 1em;
+    display: flex;
+    align-items: center; }
+    #duelStates li div {
+      margin: 0 5px;
+      display: inline-block;
+      height: 1rem;
+      width: 1rem;
+      border-radius: 50%;
+      border: solid white 1px; }
+  #duelStates .won {
+    background-color: #72f725; }
+  #duelStates .lost {
+    background-color: #f42929; }
+  #duelStates .draw {
+    background-color: #ff8300; }
+  #duelStates .expired {
+    background-color: #3c3c3c; }
+  #duelStates .expiredButPlayed {
+    background-color: #5c5c5c; }
+  #duelStates .waiting {
+    background-color: #55d8e6; }
+  #duelStates .inProgress {
+    background-color: #add8e6; }
+
+#question pre, .editorError p {
+  color: black; }
+
 #duelLangageImg, .langageImg {
   height: 4em;
   border-radius: 50%;
@@ -486,7 +551,14 @@ p.normal {
   -moz-box-shadow: 0px 0px 5px 5px rgba(227, 163, 0, 0.69);
   box-shadow: 0px 0px 5px 5px rgba(227, 163, 0, 0.69); }
 
+.langageImg {
+  height: 2em; }
+
+#duelLangageImg {
+  position: absolute; }
+
 #inputExample {
+  color: black;
   position: absolute;
   z-index: 50;
   background-color: white;
@@ -507,8 +579,9 @@ p.normal {
   height: 9em;
   opacity: 1; }
 
-#register {
-  margin: 0 auto;
+#register, #duelSubmit {
+  margin-left: auto;
+  margin-right: auto;
   display: block;
   margin-bottom: 3.5em; }
 
@@ -527,13 +600,68 @@ p.normal {
 #nav-mobile a.disabled {
   opacity: .5; }
 
-#duelCreation {
+#duelCreation, #loginModal, #registrationModal, #loginModal .modal-footer, #registrationModal .modal-footer, .side-nav {
   background-color: #443127; }
 
 #langageDropdown {
   display: none; }
 
+.indexImg {
+  width: 12rem;
+  height: 12rem; }
+
+#loginIndex, #registrationIndex {
+  padding: 0; }
+  #loginIndex p, #registrationIndex p {
+    font-size: 2em;
+    margin: 0; }
+  #loginIndex a, #registrationIndex a {
+    display: block;
+    position: relative; }
+  #loginIndex span, #registrationIndex span {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    color: orangered;
+    font-size: 2rem;
+    font-weight: bold;
+    -webkit-text-stroke: 2px;
+    -webkit-text-stroke-color: #252422; }
+
 @media (min-width: 992px) {
+  .indexImg {
+    width: 25rem;
+    height: 25rem; }
+
+  #loginIndex p, #registrationIndex p {
+    font-size: 6em; }
+  #loginIndex span, #registrationIndex span {
+    font-size: 5rem;
+    -webkit-text-stroke: 5px;
+    -webkit-text-stroke-color: #252422; }
+
+  #duelStates {
+    display: flex;
+    justify-content: center; }
+
+  .btn-flat {
+    padding: 0 2rem; }
+
+  .langageImg {
+    height: 4em; }
+
+  .duelList p, .duelList a {
+    font-weight: bold;
+    font-size: 1.5rem; }
+
+  .split {
+    display: grid;
+    grid-template-rows: auto auto; }
+    .split.middleBorder > :nth-child(2n+1) {
+      padding: 2em;
+      border-right: 1px solid black; }
+
   .imgSize, .userImg {
     height: 8em;
     width: 8em; }
@@ -582,7 +710,7 @@ p.normal {
     grid-template-columns: 7em 8em 1fr 1fr;
     margin: 1em 0;
     padding: 0.5em 0;
-    border: 2px solid black;
+    border: 2px solid white;
     border-radius: 5px; }
     .score-row.leader {
       grid-template-columns: 10em 1fr 1fr; }
@@ -593,17 +721,44 @@ p.normal {
       font-size: 2em;
       font-weight: bold;
       color: black; } }
+.split > ul {
+  display: flex;
+  justify-content: center; }
+  .split > ul li {
+    margin-left: 1em;
+    display: flex;
+    align-items: center; }
+    .split > ul li div {
+      margin: 0 5px;
+      display: inline-block;
+      height: 1rem;
+      width: 1rem;
+      border-radius: 50%;
+      border: solid white 1px; }
+
+.split ul li:nth-child(1) div {
+  background-color: #ff8300; }
+
+.split ul li:nth-child(2) div {
+  background-color: #3c3c3c; }
+
+.split ul li:nth-child(3) div {
+  background-color: #f42929; }
+
+.split ul li:nth-child(4) div {
+  background-color: #72f725; }
+
 [data-pie-id] li:nth-child(1) {
-  color: #62ef3b; }
+  color: #ff8300; }
 
 [data-pie-id] li:nth-child(2) {
-  color: #cf0e0e; }
+  color: #3c3c3c; }
 
 [data-pie-id] li:nth-child(3) {
-  color: #aec4a8; }
+  color: #f42929; }
 
 [data-pie-id] li:nth-child(4) {
-  color: #4bbf2b; }
+  color: #72f725; }
 
 ul[data-pie-id] {
   list-style: none;
@@ -611,5 +766,62 @@ ul[data-pie-id] {
 
 ul[data-pie-id] + div {
   width: 20em; }
+
+.pie-chart[id]::before, text {
+  color: white; }
+
+input:not([type]),
+input[type="text"]:not(.browser-default),
+input[type="password"]:not(.browser-default),
+input[type="email"]:not(.browser-default),
+input[type="url"]:not(.browser-default),
+input[type="time"]:not(.browser-default),
+input[type="date"]:not(.browser-default),
+input[type="datetime"]:not(.browser-default),
+input[type="datetime-local"]:not(.browser-default),
+input[type="tel"]:not(.browser-default),
+input[type="number"]:not(.browser-default),
+input[type="search"]:not(.browser-default),
+textarea.materialize-textarea {
+  border-color: white; }
+
+.input-field label, .side-nav li a {
+  color: white; }
+
+ul.autocomplete-content.dropdown-content {
+  position: absolute;
+  width: 100%; }
+
+input:not([type]):focus:not([readonly]),
+input[type="text"]:not(.browser-default):focus:not([readonly]),
+input[type="password"]:not(.browser-default):focus:not([readonly]),
+input[type="email"]:not(.browser-default):focus:not([readonly]),
+input[type="url"]:not(.browser-default):focus:not([readonly]),
+input[type="time"]:not(.browser-default):focus:not([readonly]),
+input[type="date"]:not(.browser-default):focus:not([readonly]),
+input[type="datetime"]:not(.browser-default):focus:not([readonly]),
+input[type="datetime-local"]:not(.browser-default):focus:not([readonly]),
+input[type="tel"]:not(.browser-default):focus:not([readonly]),
+input[type="number"]:not(.browser-default):focus:not([readonly]),
+input[type="search"]:not(.browser-default):focus:not([readonly]),
+textarea.materialize-textarea:focus:not([readonly]) {
+  border-bottom: 1px solid #72f725;
+  -webkit-box-shadow: 0 1px 0 0 #72f725;
+  box-shadow: 0 1px 0 0 #72f725; }
+
+input:not([type]):focus:not([readonly]) + label,
+input[type="text"]:not(.browser-default):focus:not([readonly]) + label,
+input[type="password"]:not(.browser-default):focus:not([readonly]) + label,
+input[type="email"]:not(.browser-default):focus:not([readonly]) + label,
+input[type="url"]:not(.browser-default):focus:not([readonly]) + label,
+input[type="time"]:not(.browser-default):focus:not([readonly]) + label,
+input[type="date"]:not(.browser-default):focus:not([readonly]) + label,
+input[type="datetime"]:not(.browser-default):focus:not([readonly]) + label,
+input[type="datetime-local"]:not(.browser-default):focus:not([readonly]) + label,
+input[type="tel"]:not(.browser-default):focus:not([readonly]) + label,
+input[type="number"]:not(.browser-default):focus:not([readonly]) + label,
+input[type="search"]:not(.browser-default):focus:not([readonly]) + label,
+textarea.materialize-textarea:focus:not([readonly]) + label {
+  color: #72f725; }
 
 /*# sourceMappingURL=style.css.map */
