--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,8 +1,6 @@
 $darkRed: #9e9e9e;
 $darkBrown: #443127;
 $darkerBrown: #301d13;
-$green: #9e9e9e;
-$red: #9e9e9e;
 
 $normalImgSize: 8em;
 $smallImgSize: 4em;
@@ -35,11 +33,9 @@ $smallSpace: .5em;
 .modal-content>.content>p{
     margin-bottom: $smallSpace;
 }
-
-//------------------------------------ NAVBAR ------------------------------------//
 .navbar{
     @include userSelect(none);  
-    background-image: url(../images/navbar.png);
+    background-image: url(../images/navbar);
     background-color: transparent;
     height: 103px;
     background-repeat: repeat-x;
@@ -68,7 +64,6 @@ li > a{
         padding-left: 5px;
     }
 }
-//------------------------------------ MODE SELECTOR ------------------------------------//
 #modeSelector, #duelModeSelector {
     display: grid;
     grid-template-columns : repeat(4, 2em);
@@ -106,8 +101,9 @@ li > a{
 #duelModeSelector{
     grid-template-columns : repeat(5, 2em);
 }
-//------------------------------------ GOOD CSS ------------------------------------//
-//------------------------------------ BASE ------------------------------------//
+html{
+    color: white;
+}
 body {
     display: flex;
     min-height: 100vh;
@@ -163,7 +159,14 @@ footer{
 pre{
     white-space: pre-wrap;
 }
-//------------------------------------ CLASSES ------------------------------------//
+.errorCode{
+    width: 100vw;
+    margin: 32vh 0;
+    text-align: center;
+    font-weight: bold;
+    transform: rotateZ(-15deg);
+}
+
 .questionTitle{
     font-size: 2rem;
     background-color: lightgray;
@@ -179,7 +182,7 @@ pre{
     grid-template-columns: 5em $smallImgSize 1fr 1fr;
     margin: .5em 0;
     padding: $smallSpace 0;
-    border: 2px solid black;
+    border: 2px solid white;
     border-radius: 5px;
     & p{
         margin: auto;
@@ -222,10 +225,10 @@ pre{
         height: 6em;
     }
     & .top{
-        background-image: url(../images/dropdownTop.png);
+        background-image: url(../images/dropdownTop);
     }
     & .bottom{
-        background-image: url(../images/dropdownBottom.png);
+        background-image: url(../images/dropdownBottom);
     }
     & .top, & .bottom{
         width: inherit;
@@ -233,7 +236,7 @@ pre{
         background-size: cover;
     }
     &>.content{
-        background-image: url(../images/dropdownMiddle.png);
+        background-image: url(../images/dropdownMiddle);
         background-size: cover;
         width: inherit;
         height: inherit;
@@ -262,7 +265,7 @@ pre{
     position: relative;
     background: none;
     border: none;
-    border-bottom: 1px solid #9e9e9e;
+    border-bottom: 1px solid white;
     margin: 0 0 20px 0;
     &:hover, &:focus, &:active{
         background: none;
@@ -272,7 +275,7 @@ pre{
         position: absolute;
         height: 60%;
         width: 100%;
-        border-left: 1px solid #9e9e9e;
+        border-left: 1px solid white;
         top: 20%;
         left: 0;
     }
@@ -284,7 +287,7 @@ pre{
     width: 5em;
     height: 10px;
     border-radius: 5px;
-    background-color: darkgrey;
+    background-color: white;
     & .passwordStrengthForeground{
         height: 100%;
         border-radius: 5px;
@@ -339,11 +342,12 @@ pre{
     position: relative;
 }
 .split{
-    display: grid;
-    grid-template-rows: auto auto;
+    display: block;
+    & > .btn-flat{
+        width: 100%;
+    }
     &.middleBorder> :nth-child(2n+1){
         padding: 2em;
-        border-right: 1px solid black;
     }
 }
 .center{
@@ -367,7 +371,7 @@ pre{
     display: none;
 }
 .userImg{
-    border: solid black 2px;
+    border: solid white 2px;
     border-radius: 50%;
 }
 .imgSize, .userImg{
@@ -423,11 +427,13 @@ div.success{
         text-align: center;
         margin: auto;
     }
+    margin: 0.5em 1em;
 }
 p.success {
     color: green;
     font-size: 1.5em;
     font-weight: bold;
+    margin: 0.5em 1em;
 }
 div.errors{
     border-radius: 5px;
@@ -440,13 +446,15 @@ div.errors{
         text-align: center;
         margin: auto;
     }
+    margin: 0.5em 1em;
 }
 p.errors {
     color: red;
     font-size: 1.5em;
     font-weight: bold;
+    margin: 0.5em 1em;
 }
-p.normal {
+.editorError p.normal {
     color: darkorange;
     background-color: transparent;
     font-size: 1.5em;
@@ -472,6 +480,8 @@ p.normal {
 .duelList{
     height: 50vh;
     overflow-y: scroll;
+    margin-left: 1em;
+    margin-right: 1em;
     & li{
         justify-items: center;
         margin-top: .25em;
@@ -524,22 +534,28 @@ p.normal {
     }
     & p, & a{
         font-weight: bold;
-        font-size: 1.5rem;
+        font-size: 0.8rem;
     }
     & .won{
-        background-color: green;
+        background-color: #72f725;
     }
     & .lost{
-        background-color: red;
+        background-color: #f42929;
     }
     & .draw{
-        background-color: yellow;
+        background-color: #ff8300;
     }
     & .expired{
-        background-color: grey;
+        background-color: #3c3c3c;
+    }
+    & .expiredButPlayed{
+        background-color: #5c5c5c;
+    }
+    & .waiting{
+        background-color: #55d8e6;
     }
     & .inProgress{
-        background-color: lightblue;
+        background-color: #add8e6;
     }
     & .won, & .lost, & .draw, & .expired, & .inProgress{
         opacity: 1;
@@ -552,7 +568,7 @@ p.normal {
     grid-template-columns: 25% 75%;
 }
 .side-nav li:last-child{
-    color: black;
+    color: white;
     display: grid;
     grid-template-columns: 1fr auto 1fr;
 }
@@ -567,7 +583,61 @@ p.normal {
         text-align: left;
     }
 }
-//------------------------------------ IDS ------------------------------------//
+.span-2{
+    grid-column: span 2;
+}
+.btn-flat{
+    color: white;
+    padding: 0;
+    background-color: transparent;
+    border: solid white 2px;
+    margin: 5px 0;
+    &:hover{
+        background-color: #3c3c3c;
+    }
+}
+#duelStates{
+    display: grid;
+    justify-items: center;
+    grid-template-columns: 1fr 1fr;
+    & li{  
+        margin-left: 1em;
+        display: flex;
+        align-items: center;
+        & div{
+            margin: 0 5px;
+            display: inline-block;
+            height: 1rem;
+            width: 1rem;
+            border-radius: 50%;
+            border: solid white 1px;
+        }
+    }
+    & .won{
+        background-color: #72f725;
+    }
+    & .lost{
+        background-color: #f42929;
+    }
+    & .draw{
+        background-color: #ff8300;
+    }
+    & .expired{
+        background-color: #3c3c3c;
+    }
+    & .expiredButPlayed{
+        background-color: #5c5c5c;
+    }
+    & .waiting{
+        background-color: #55d8e6;
+    }
+    & .inProgress{
+        background-color: #add8e6;
+    }
+}
+#question pre, .editorError p{
+    color: black;
+}
 #duelLangageImg, .langageImg{
     height: $smallImgSize;
     border-radius: 50%;
@@ -575,7 +645,14 @@ p.normal {
     -moz-box-shadow: 0px 0px 5px 5px rgba(227,163,0,.69);
     box-shadow: 0px 0px 5px 5px rgba(227,163,0,.69); 
 }
+.langageImg{
+    height: $smallImgSize/2;
+}
+#duelLangageImg{
+    position: absolute;
+}
 #inputExample{
+    color: black;
     position: absolute;
     z-index: 50;
     background-color: white;
@@ -599,8 +676,9 @@ p.normal {
     height: 9em;
     opacity: 1;
 }
-#register{
-    margin: 0 auto;
+#register, #duelSubmit{
+    margin-left: auto;
+    margin-right: auto;
     display: block;
     margin-bottom: 3.5em;
 }
@@ -624,14 +702,78 @@ p.normal {
         opacity: .5;
     }
 }
-#duelCreation{
-    background-color: #443127;
+#duelCreation, #loginModal, #registrationModal, #loginModal .modal-footer, #registrationModal .modal-footer, .side-nav{
+    background-color: $darkBrown;
 }
 #langageDropdown{
     display: none;
 }
+.indexImg{
+    width: 12rem;
+    height: 12rem;
+}
+#loginIndex, #registrationIndex{
+    padding: 0;
+    & p{
+        font-size: 2em;
+        margin: 0;
+    }
+    & a{
+        display: block;
+        position: relative;
+    }
+    & span{
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%,-50%);
+        color: orangered;
+        font-size: 2rem;
+        font-weight: bold;
+        -webkit-text-stroke: 2px;
+        -webkit-text-stroke-color: #252422;
+    }
+}
 //------------------------------------ MEDIUM TO MAX SIZE ------------------------------------//
 @media (min-width: 992px) {
+    .indexImg{
+        width: 25rem;
+        height: 25rem;
+    }
+    #loginIndex, #registrationIndex{
+        & p{
+            font-size: 6em;
+        }
+        & span{
+            font-size: 5rem;
+            -webkit-text-stroke: 5px;
+            -webkit-text-stroke-color: #252422;
+        }
+    }
+    #duelStates{
+        display: flex;
+        justify-content: center;
+    }
+    .btn-flat{
+        padding: 0 2rem;
+    }
+    .langageImg{
+        height: $smallImgSize;
+    }
+    .duelList{
+        & p, & a{
+            font-weight: bold;
+            font-size: 1.5rem;
+        }
+    }
+    .split{
+        display: grid;
+        grid-template-rows: auto auto;
+        &.middleBorder> :nth-child(2n+1){
+            padding: 2em;
+            border-right: 1px solid black;
+        }
+    }
     .imgSize, .userImg{
         height: $normalImgSize;
         width: $normalImgSize;
@@ -644,7 +786,6 @@ p.normal {
     #langageDropdown{
         display: block;
     }
-    //------------------------------------ NAVBAR ------------------------------------//
     a.brand-logo:hover{
         transform: scale(1.1);
     }
@@ -697,7 +838,7 @@ p.normal {
         grid-template-columns: 7em $normalImgSize 1fr 1fr;
         margin: 1em 0;
         padding: $smallSpace 0;
-        border: 2px solid black;
+        border: 2px solid white;
         border-radius: 5px;
         & p{
             margin: auto;
@@ -709,17 +850,46 @@ p.normal {
 }
 
 //------------------------------------ PIE CHART ------------------------------------//
+.split > ul {
+    display: flex;
+    justify-content: center;
+    & li{
+        margin-left: 1em;
+        display: flex;
+        align-items: center;
+        & div{
+            margin: 0 5px;
+            display: inline-block;
+            height: 1rem;
+            width: 1rem;
+            border-radius: 50%;
+            border: solid white 1px;
+        }
+    }
+}
+.split ul li:nth-child(1) div{
+    background-color: #ff8300;
+}
+.split ul li:nth-child(2) div{
+    background-color: #3c3c3c;
+}
+.split ul li:nth-child(3) div{
+    background-color: #f42929;
+}
+.split ul li:nth-child(4) div{
+    background-color: #72f725;
+}
 [data-pie-id] li:nth-child(1) {
-    color: #62ef3b;
+    color: #ff8300;
 }
 [data-pie-id] li:nth-child(2) {
-    color: #cf0e0e;
+    color: #3c3c3c;
 }
 [data-pie-id] li:nth-child(3) {
-    color: #aec4a8;
+    color: #f42929;
 }
 [data-pie-id] li:nth-child(4) {
-    color: #4bbf2b;
+    color: #72f725;
 }
 ul[data-pie-id] {
     list-style: none;
@@ -727,4 +897,65 @@ ul[data-pie-id] {
 }
 ul[data-pie-id] + div {
     width: 20em;
+}
+.pie-chart[id]::before, text{
+    color: white;
+}
+//------------------------------------ MATERIALIZE ------------------------------------//
+
+input:not([type]), 
+input[type="text"]:not(.browser-default), 
+input[type="password"]:not(.browser-default), 
+input[type="email"]:not(.browser-default), 
+input[type="url"]:not(.browser-default), 
+input[type="time"]:not(.browser-default), 
+input[type="date"]:not(.browser-default), 
+input[type="datetime"]:not(.browser-default), 
+input[type="datetime-local"]:not(.browser-default), 
+input[type="tel"]:not(.browser-default), 
+input[type="number"]:not(.browser-default), 
+input[type="search"]:not(.browser-default), 
+textarea.materialize-textarea{
+    border-color: white; 
+}
+.input-field label, .side-nav li a{
+    color: white;
+}
+ul.autocomplete-content.dropdown-content{
+    position: absolute;
+    width: 100%;
+}
+
+input:not([type]):focus:not([readonly]), 
+input[type="text"]:not(.browser-default):focus:not([readonly]), 
+input[type="password"]:not(.browser-default):focus:not([readonly]), 
+input[type="email"]:not(.browser-default):focus:not([readonly]), 
+input[type="url"]:not(.browser-default):focus:not([readonly]), 
+input[type="time"]:not(.browser-default):focus:not([readonly]), 
+input[type="date"]:not(.browser-default):focus:not([readonly]), 
+input[type="datetime"]:not(.browser-default):focus:not([readonly]), 
+input[type="datetime-local"]:not(.browser-default):focus:not([readonly]), 
+input[type="tel"]:not(.browser-default):focus:not([readonly]), 
+input[type="number"]:not(.browser-default):focus:not([readonly]), 
+input[type="search"]:not(.browser-default):focus:not([readonly]), 
+textarea.materialize-textarea:focus:not([readonly]) {
+    border-bottom: 1px solid #72f725;
+    -webkit-box-shadow: 0 1px 0 0 #72f725;
+    box-shadow: 0 1px 0 0 #72f725;
+}
+
+input:not([type]):focus:not([readonly]) + label, 
+input[type="text"]:not(.browser-default):focus:not([readonly]) + label, 
+input[type="password"]:not(.browser-default):focus:not([readonly]) + label, 
+input[type="email"]:not(.browser-default):focus:not([readonly]) + label, 
+input[type="url"]:not(.browser-default):focus:not([readonly]) + label, 
+input[type="time"]:not(.browser-default):focus:not([readonly]) + label, 
+input[type="date"]:not(.browser-default):focus:not([readonly]) + label, 
+input[type="datetime"]:not(.browser-default):focus:not([readonly]) + label, 
+input[type="datetime-local"]:not(.browser-default):focus:not([readonly]) + label, 
+input[type="tel"]:not(.browser-default):focus:not([readonly]) + label, 
+input[type="number"]:not(.browser-default):focus:not([readonly]) + label, 
+input[type="search"]:not(.browser-default):focus:not([readonly]) + label, 
+textarea.materialize-textarea:focus:not([readonly]) + label {
+    color: #72f725;
 }
